Hot Sounds + Alien Sounds Part 1
- Finished Sushi Hot
- Got half of Alien sounds finished
- Fixed tracker screen issue

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Assets\PhaserGame.cs" />
     <Compile Include="Assets\PhaserShoot.cs" />
     <Compile Include="Assets\PointBallMover.cs" />
+    <Compile Include="Assets\RadarDoppler.cs" />
     <Compile Include="Assets\ReparentSauce.cs" />
     <Compile Include="Assets\RightCollision.cs" />
     <Compile Include="Assets\Ringbell.cs" />
