--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Assets\Ringbell.cs" />
     <Compile Include="Assets\RingBellAnimator.cs" />
     <Compile Include="Assets\RocketSushi.cs" />
+    <Compile Include="Assets\RotateFW.cs" />
     <Compile Include="Assets\RotateTransporter.cs" />
     <Compile Include="Assets\Saucable.cs" />
     <Compile Include="Assets\SaucePour.cs" />
