--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Assets\SuperHotColorScheme.cs" />
     <Compile Include="Assets\TakePicture.cs" />
     <Compile Include="Assets\TankAI.cs" />
+    <Compile Include="Assets\TextFacePlayer.cs" />
     <Compile Include="Assets\ThrowSpeed.cs" />
     <Compile Include="Assets\TimeManipulator.cs" />
     <Compile Include="Assets\TrackAchievements.cs" />
